# BlackAgent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  pytest.ini  优化.md  重构.md  需求文档.md
config/: __init__.py  clue_generation_rules.yaml  config.real.example.yaml  config.yaml  context_polarity.yaml  entity_patterns.yaml  intel_sources.acceptance_direct.yaml  intel_sources.acceptance_telegramnav_live.yaml  intel_sources.blackgray.yaml  intel_sources.collection_optimization.yaml  intel_sources.direct_trial.yaml  intel_sources.example.yaml  intel_sources.public.yaml  label_schema.json  model_stage_policy.yaml  risk_taxonomy.yaml  routing_profiles.yaml  slang_dictionary.yaml  telegram_public_delivery_channels.yaml  telegram_watch.example.yaml  theme_synonyms.yaml  x_watch.example.yaml
data/: collection_phase_multi_source_clue_evidence_index.json  collection_phase_multi_source_selected_snapshots.jsonl  eval_manual_heldout_real_llm_ablation.json  eval_manual_heldout_real_llm_ablation_summary.json
docs/: architecture_scaling_plan.md  blackgray_collection.md  cleaning_phase_delivery.md  collection_phase_delivery.md  config_catalog.md  data_delivery_assessment.md  delivery_report.md  deployment.md  phase2_phase3_delivery.md  production_automation.md  real_backend.md  telegram_collection.md  x_collection.md  交付文档.md  使用文档.md
prompts/: classifier_prompt_v1.yaml  exploration_prompt_v1.yaml  extractor_prompt_v1.yaml
scripts/: build_acceptance_evidence_pack.py  build_acceptance_trace_materials.py  build_authorized_source_rerun_pack.py  build_collection_optimization_report.py  build_defense_acceptance_report.py  build_delivery_deck.py  build_external_source_evidence_pack.py  build_heldout_eval.py  build_ocr_hardset.py  build_phase_delivery_package.py  build_slang_candidate_report.py  collect_blackgray_all.py  collect_public_sources.py  collect_telegram_public_delivery.py  evaluate_pipeline.py  evaluate_query_level.py  export_acceptance_e2e_evidence.py  export_collection_phase_stats.py  export_delivery_corpora.py  export_manual_heldout_review.py  generate_ops_dashboard.py  generate_source_smoke_report.py  hydrate_public_search_results.py  run_acceptance_gate.py  run_agent_cli.py  run_classification_extraction_phase.py  run_cleaning_phase.py  run_collection_scheduler.py  run_cross_source_graph_demo.py  run_live_source_smoke.py  run_ocr_demo.py  run_scale_benchmark.py  serve_demo_api.py  smoke_llm_real.py  telegram_telethon_collector.py  validate_manual_heldout.py  x_recent_search_collector.py
src/: __init__.py  config_loader.py  local_runtime.py
storage/: __init__.py  audit_repo.py  cleaned_repo.py  clue_repo.py  entity_graph.py  entity_repo.py  graph_repo.py  raw_repo.py  review_repo.py  schemas.py  (+3 more)
(+404 files in other folders)
