[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "blackagent"
version = "0.1.0"
description = "BlackAgent user-query-driven intelligence investigation pipeline"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110,<1.0",
    "uvicorn[standard]>=0.27,<1.0",
    "pydantic>=2.5,<3.0",
    "PyYAML>=6.0,<7.0",
]

[project.optional-dependencies]
postgres = [
    "psycopg[binary]>=3.1,<4.0",
]
telegram = [
    "telethon>=1.36,<2.0",
]
dev = [
    "pytest>=7.4,<9.0",
    "httpx>=0.27,<1.0",
]

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"
