[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "blackagent"
version = "0.1.0"
description = "BlackAgent user-query-driven intelligence investigation pipeline"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.5,<3.0",
    "PyYAML>=6.0,<7.0",
]

[project.optional-dependencies]
postgres = [
    "psycopg[binary]>=3.1,<4.0",
]
telegram = [
    "telethon>=1.36,<2.0",
]
dev = [
    "pytest>=7.4,<9.0",
]

[project.scripts]
blackagent = "blackagent.interfaces.cli.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "storage*"]

[tool.pytest.ini_options]
pythonpath = [".", "src"]
testpaths = ["tests"]
addopts = "-q"
