[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "blackagent"
version = "0.1.0"
description = "BlackAgent user-query-driven intelligence investigation pipeline"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.5,<3.0",
    "PyYAML>=6.0,<7.0",
]

[project.optional-dependencies]
postgres = [
    "psycopg[binary]>=3.1,<4.0",
]
telegram = [
    "telethon>=1.36,<2.0",
    "PySocks>=1.7,<2.0",
    "python-socks[asyncio]>=2.4,<3.0",
]
dev = [
    "pytest>=7.4,<9.0",
]

[project.scripts]
blackagent = "blackagent.interfaces.cli.main:main"

[tool.setuptools.packages.find]
where = ["src", "."]
include = ["blackagent*", "src*", "storage*", "config*"]
exclude = ["src.storage*"]
namespaces = false

[tool.setuptools.package-data]
blackagent = ["py.typed"]
config = ["*.yaml", "*.json"]

[tool.pytest.ini_options]
pythonpath = [".", "src"]
testpaths = ["tests"]
addopts = "-q -m 'not integration and not network'"
markers = [
    "integration: slower cross-component tests that may touch persistent backends or broad runtime wiring",
    "network: tests that require explicit authorized network access",
]
